--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Learning-React</title>
   <link rel="stylesheet" href="styles/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
