--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <main id="app"></main>
-  <script src="/static/app.js"></script>
+  <script src="build.js"></script>
 </body>
 </html>
