--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>TITLE HERE</title>
+    <title>Learning-React</title>
 
     
     <link href="./app.2a436c1c2e136cb3e4cac2097435ac87.css" rel="stylesheet">
