--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link href="./app.2a436c1c2e136cb3e4cac2097435ac87.css" rel="stylesheet">
     
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta charset="utf-8">
   </head>
   <body>
